Fixed the issue of NullPointerException for driver setting.